error_log.txt

> Configure project :app
WARNING: The option setting 'android.aapt2FromMavenOverride=/data/data/com.termux/files/usr/bin/aapt2' is experimental.
WARNING: We recommend using a newer Android Gradle plugin to use compileSdk = 34

This Android Gradle plugin (8.0.0) was tested up to compileSdk = 33.

You are strongly encouraged to update your project to use a newer
Android Gradle plugin that has been tested with compileSdk = 34.

If you are already using the latest version of the Android Gradle plugin,
you may need to wait until a newer version with support for compileSdk = 34 is available.

To suppress this warning, add/update
    android.suppressUnsupportedCompileSdk=34
to this project's gradle.properties.

> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:mergeDebugNativeDebugMetadata NO-SOURCE
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE

> Task :app:compileDebugJavaWithJavac
/storage/emulated/0/AndroidIDEProjects/MySalahTracker/app/src/main/java/com/my/salah/tracker/app/BackupHelper.java:211: error: cannot find symbol
        android.widget.TextView dangerTitle = new android.widget.TextView(context);
                                                                          ^
  symbol:   variable context
  location: class BackupHelper
/storage/emulated/0/AndroidIDEProjects/MySalahTracker/app/src/main/java/com/my/salah/tracker/app/BackupHelper.java:219: error: cannot find symbol
        android.widget.LinearLayout dangerSection = new android.widget.LinearLayout(context);
                                                                                    ^
  symbol:   variable context
  location: class BackupHelper
/storage/emulated/0/AndroidIDEProjects/MySalahTracker/app/src/main/java/com/my/salah/tracker/app/BackupHelper.java:227: error: cannot find symbol
        android.widget.Button btnWipeLocal = new android.widget.Button(context);
                                                                       ^
  symbol:   variable context
  location: class BackupHelper
/storage/emulated/0/AndroidIDEProjects/MySalahTracker/app/src/main/java/com/my/salah/tracker/app/BackupHelper.java:240: error: cannot find symbol
        android.widget.Button btnWipeCloud = new android.widget.Button(context);
                                                                       ^
  symbol:   variable context
  location: class BackupHelper
/storage/emulated/0/AndroidIDEProjects/MySalahTracker/app/src/main/java/com/my/salah/tracker/app/BackupHelper.java:251: error: cannot find symbol
                new android.app.AlertDialog.Builder(context)
                                                    ^
  symbol: variable context
/storage/emulated/0/AndroidIDEProjects/MySalahTracker/app/src/main/java/com/my/salah/tracker/app/BackupHelper.java:255: error: cannot find symbol
                        android.widget.Toast.makeText(context, "Wiping all data...", android.widget.Toast.LENGTH_SHORT).show();
                                                      ^
  symbol: variable context
/storage/emulated/0/AndroidIDEProjects/MySalahTracker/app/src/main/java/com/my/salah/tracker/app/BackupHelper.java:257: error: cannot find symbol
                            ((android.app.ActivityManager) context.getSystemService(android.content.Context.ACTIVITY_SERVICE)).clearApplicationUserData();
                                                           ^
  symbol: variable context
/storage/emulated/0/AndroidIDEProjects/MySalahTracker/app/src/main/java/com/my/salah/tracker/app/BackupHelper.java:267: error: cannot find symbol
                 android.widget.Toast.makeText(context, "Cloud Wipe logic will be connected soon!", android.widget.Toast.LENGTH_SHORT).show();
                                               ^
  symbol: variable context
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
8 errors

> Task :app:compileDebugJavaWithJavac FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

BUILD FAILED in 16s
14 actionable tasks: 1 executed, 13 up-to-date
